syntax = "proto3";

package auth;

option go_package = "github.com/go-park-mail-ru/2025_2_Suzuki_plus_one/proto/auth;authpb";


service AuthService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message CreateUserRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message CreateUserResponse {
    bool success = 1;
    int64 user_id = 2;
    string access_token = 3;
    string refresh_token = 4;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string access_token = 2;
    string refresh_token = 3;
}

message LogoutRequest {
    string refresh_token = 1;
    string access_token = 2;
}

message LogoutResponse {
    bool success = 1;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    bool success = 1;
    string access_token = 2;
}